fix js bugs on mobile design

--- a/app/scss/layout/_content.scss
+++ b/app/scss/layout/_content.scss
@@ -394,7 +394,7 @@
 
       ul {
         height: 420px;
-        .slide {
+        .slide2 {
           img {
             height: 100%;
             width: 100%;
@@ -431,7 +431,7 @@
         }
       }
 
-      .slide {
+      .slide2 {
         position: absolute;
         inset: 0;
         opacity: 0;
